# rescue-web

./: .gitignore  README.md  index.html  style.css
.github/workflows/: api.yml  mobile.yml  web.yml
apps/mobile/: .gitignore  README.md  pubspec.yaml
apps/mobile/lib/: api_client.dart  config.dart  main.dart
apps/mobile/test/: widget_test.dart
apps/web/: .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/health/: route.ts
apps/web/app/components/: api-status.tsx
docs/: project-manual.md
infra/: README.md
infra/docker/: docker-compose.yml
services/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/app/: __init__.py  __main__.py  alerting.py  audit.py  broker.py  config.py  db.py  deps.py  enums.py  events.py  geo.py  main.py  models.py  privacy.py  queries.py  retention.py  schemas.py  security.py
services/api/app/api/: admin.py  alerts.py  auth.py  health.py  incidents.py  missions.py  responders.py  ws.py
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_enable_postgis.py  8a5b95fb297e_core_tables_and_indexes.py  c2e876afbcae_mission_archive_and_task_index.py
services/api/tests/: _util.py  conftest.py  test_alerting_unit.py  test_alerts_api.py  test_auth_api.py  test_health.py  test_incidents.py  test_mission_room_api.py  test_missions_api.py  test_retention.py  test_security.py  test_tasks_api.py  test_ws.py
